--- a/src/components/registration/ForgotPassword.css
+++ b/src/components/registration/ForgotPassword.css
@@ -7,63 +7,83 @@
     /* align-items: center; */
 }
 
+.forgotPasswordContent.forgotPasswordSuccess span {
+    font-size: 18px;
+    font-weight: 500;
+}
+
 .forgotPasswordContent {
     border-radius: 5px;
-    background: rgba(48, 66, 105, 0.8);
+    background: rgba(255, 255, 255, 0.9);
     height: 30%;
     margin-top: 10%;
 }
 
 .forgotPasswordContent span {
-    font-size: 22px;
+    font-size: 34px;
     font-weight: 500;
-    color: #fff;
+    color: #304269;
     padding: 20px 0 20px 0;
+}
+
+.forgotPasswordContent .forgotPasswordContentSpanText {
+    font-size: 12px;
+    font-weight: 400;
+    color: #686868;
+    padding-bottom: 60px;
 }
 
 .forgotPasswordContent input {
     font-size: 14px;
     font-weight: 400;
-    color: #fff;
+    color: #304269;
     border-radius: 5px;
     border: none;
     outline: none;
     padding-left: 10px;
-    width: 80%;
-    background: rgba(255, 255, 255, 0.349);
+    width: 100%;
+    background: none;
     min-height: 41px;
+    border: 1px solid #686868;
 }
 
 .forgotPasswordContent input::placeholder {
-    color: #fff;
+    color: #686868;
 }
 
 .forgotPasswordBt {
     cursor: pointer;
     height: 100%;
-    background: #f60;
-    padding: 10px;
+    background: #304269;
+    padding: 10px 50px;
     border-radius: 5px;
-    margin: 20px;
+    margin: 10px;
+    min-height: 41px;
 }
 
-.forgotPasswordBt span {
+.forgotPasswordContent .forgotPasswordBt span {
     font-size: 14px;
+    color: #fff;
+    padding: 0;
 }
 
 .forgotPasswordContent-active {
     color: rgb(37, 165, 154);
     font-size: 14px;
     font-weight: 400;
+    padding: 20px 0 20px 0;
+    padding-bottom: 60px;
 }
 
 .forgotPasswordContent .forgotPasswordContent-error {
     color: #e81123 !important;
     font-size: 14px;
     font-weight: 400;
-    width: 80%;
+    width: 100%;
     padding-top: 5px;
-    text-align: end;
+    text-align: center;
+    padding: 20px 0 20px 0;
+    padding-bottom: 60px;
 }
 
 .forgotPasswordContent .forgotPasswordInput-error {
@@ -76,6 +96,7 @@
     display: flex;
     justify-content: center;
     margin: 5px;
+    min-height: 41px;
 }
 
 .resetPasswordInput i {
@@ -103,4 +124,13 @@
 .resetPasswordInput-active i:hover {
     background: url(./img/eyeBlue.svg) no-repeat;
     background-size: 100% 100%;
+}
+
+@media (max-width: 990px) {}
+
+@media (max-width: 586px) {
+    .forgotPasswordContent span {
+        font-size: 24px;
+        text-align: center;
+    }
 }
