--- a/src/components/driverProfile/DriverInfo.css
+++ b/src/components/driverProfile/DriverInfo.css
@@ -101,9 +101,9 @@
     top: 0px;
     width: 20px;
     height: 20px;
-    padding: 5px;
+    padding: 15px;
     cursor: pointer;
-    background-position: top center;
+    background-position: top center !important;
     background-repeat: no-repeat !important;
 }
 
