--- a/src/components/driverProfileRegistration/DriverProfileBilling.css
+++ b/src/components/driverProfileRegistration/DriverProfileBilling.css
@@ -143,14 +143,55 @@
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2) !important;
 }
 
+.billingModalContent {
+    position: relative;
+}
+
+.billingModalContentText {
+    font-size: 12px;
+}
+
+.billingModalSelectMenu {}
+
+.billingModalSelectMenu.route_dateSelect .MuiSelect-selectMenu {
+    font-weight: 400 !important;
+    font-size: 14px !important;
+    color: #304269 !important;
+    padding-left: 12px;
+    width: 100%;
+    position: static !important;
+    z-index: 2000 !important;
+}
+
+.billingModalHeder {
+    border-bottom: 1px solid rgba(48, 66, 105, 0.233);
+    margin-bottom: 15px;
+}
+
+.billingModalFooter button span {
+    font-size: 12px !important;
+    color: rgba(51, 51, 51, 0.6) !important;
+}
+
+.billingModalFooter button {
+    font-size: 12px !important;
+    color: #fff !important;
+    background: #304269;
+    border-radius: 5px;
+    padding: 0 25px;
+}
+
+
+/* 
 .billingModalContent label {
     font-size: 14px;
     font-weight: 400;
     color: #304269;
     margin: 0;
-}
+} */
 
-.billingModalContent input {
+
+/* .billingModalContent input {
     color: #333;
     font-weight: 400;
     font-size: 14px;
@@ -160,14 +201,15 @@
     min-height: 40px;
     margin: 5px 0;
     transition: all 0.3s;
-}
+} */
 
-.billingModalContent input:hover,
+
+/* .billingModalContent input:hover,
 .billingModalContent input:focus {
     border-color: #304269;
     text-decoration: none;
     outline: #304269;
-}
+} */
 
 .billingBtSubmit {
     background: none;
@@ -193,6 +235,8 @@
     max-height: 50px !important;
     line-height: 50px !important;
     padding: 0 !important;
+    color: #304269 !important;
+    padding-left: 8px !important;
 }
 
 .billingModalContentDropDown button {
