--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -70,6 +70,7 @@
     opacity: 0;
     align-items: center;
     justify-content: center;
+    text-align: center;
     border-radius: 50%;
     background: rgba(48, 66, 105, 0.836);
     width: 156px;
