--- a/src/components/drivers/Drivers.css
+++ b/src/components/drivers/Drivers.css
@@ -31,31 +31,16 @@
     padding-top: 10px;
 }
 
+@media (max-width: 900) {}
 
-/*
-@media (max-width: 1400px) {
+@media (max-width: 560px) {
     .drivers_top_background {
-        padding: 0% 10% 1% 10%;
+        padding-bottom: 0px;
+        box-shadow: none;
     }
-    .drivers_bottom_background {
-        padding: 0% 10% 1% 10%;
+    .drivers_route {
+        border-radius: 0px;
     }
 }
 
-@media (max-width: 1200px) {
-    .drivers_top_background {
-        padding: 0% 5% 1% 5%;
-    }
-    .drivers_bottom_background {
-        padding: 0% 5% 1% 5%;
-    }
-}
-
-@media (max-width: 1000px) {
-    .drivers_top_background {
-        padding: 0;
-    }
-    .drivers_bottom_background {
-        padding: 0;
-    }
-}*/
+@media (max-width: 430px) {}
