--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -1,3 +1,7 @@
+.placeinfo_starsBlock{
+    font-size: 18px;
+}
+
 .placeDescription_background {
     top: 0;
     /*width: 100%;*/
@@ -7,6 +11,7 @@
     /* object-fit: cover; */
     padding-bottom: 50px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
 }
 
 .placeDescription_topImageMask{
@@ -32,7 +37,7 @@
 .placeDescription_description_name {
     font-size: 34px;
     font-weight: 600;
-    color: #304269;
+    color: #ffffff;
     margin-right: auto;
     line-height: 34px;
 }
@@ -56,17 +61,20 @@
     height: 14px;
     width: 14px;
     margin: auto 5px auto 0;
-    background: url(pictures/tag_gray.svg);
+    background: url(pictures/tag_white.svg);
     background-size: 14px 14px;
 }
 
 .placeDescription_description_tagElement {
     font-size: 12px;
     font-weight: 400;
-    color: #686868;
+    color: #ffffff;
     margin: auto 5px auto 0;
 }
 
+.placeDescription_description_commentTextStyle{
+    color: #ffffff;
+}
 .placeDescription_description_info {
     font-size: 14px;
     font-weight: 400;
