--- a/src/components/driverProfile/DriverInfo.css
+++ b/src/components/driverProfile/DriverInfo.css
@@ -159,6 +159,7 @@
         margin-top: 0px;
         margin-bottom: 0px;
         padding: 20px 10px;
+        padding-bottom: 0px;
     }
     .driverInfo_photo {
         width: 90px;
