--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -33,16 +33,16 @@
     margin-top: 40px;
 }
 
-.commentLinkStyle{
+.commentLinkStyle {
     color: #0056b3;
 }
 
-.commentLinkStyle:hover{
+.commentLinkStyle:hover {
     text-decoration: underline;
     cursor: pointer;
 }
 
-.commentTextStyle{
+.commentTextStyle {
     white-space: pre;
     color: #999;
 }
@@ -159,7 +159,7 @@
     text-overflow: ellipsis;
     font-weight: 400;
     font-size: 14px;
-    color: #304269;
+    color: rgba(0, 0, 0, 0.6);
     margin: 0;
     line-height: 20px;
 }
