--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -1,8 +1,8 @@
-.placeinfo_starsBlock{
+.placeinfo_starsBlock {
     font-size: 18px;
 }
 
-.placeinfo_vertical{
+.placeinfo_vertical {
     margin: 3px 5px 0;
     color: #ffffff;
     border-left: 1px solid #ffffff;
@@ -14,17 +14,20 @@
     /*background: url(pictures/tbs_4.jpg) no-repeat 100%;
     background-size: cover;
     background-position: center center;*/
-    /* object-fit: cover; */
+    /* object-fit: cover !important; */
+    background-size: 100% 100% !important;
+    /* filter: brightness(0.5); */
     padding-bottom: 50px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
     overflow: hidden;
 }
 
-.placeDescription_topImageMask{
-    top: 0;
+.placeDescription_topImageMask {
+    /* top: 0;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100%; */
+    /* filter: brightness(0.5); */
     background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -78,9 +81,10 @@
     margin: auto 5px 0 0;
 }
 
-.placeDescription_description_commentTextStyle{
+.placeDescription_description_commentTextStyle {
     color: #ffffff;
 }
+
 .placeDescription_description_info {
     font-size: 14px;
     font-weight: 400;
@@ -153,11 +157,11 @@
     color: black;
 }
 
-.placesDescription_travelBlock_element :nth-child(2){
+.placesDescription_travelBlock_element :nth-child(2) {
     width: 100%;
 }
 
-.travelBlockSearch{
+.travelBlockSearch {
     /*width: 100%;*/
     border: none;
     outline: none;
@@ -171,6 +175,27 @@
     /*margin: 2px;*/
     max-height: 41px;
     min-height: 41px;
+}
+
+.routeDescrDate {
+    cursor: pointer;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    /*margin: 2px;*/
+    max-height: 41px;
+    min-height: 41px;
+}
+
+.routeDescrDate div {
+    cursor: pointer !important;
+    width: 100% !important;
+    color: #000 !important;
+    font-weight: 400 !important;
+    font-size: 14px !important;
+    max-height: 41px;
+    line-height: 41px;
+    bottom: 0 !important;
 }
 
 .placeDescrDate-Check {
@@ -187,14 +212,16 @@
     line-height: 41px;
 }
 
+.routeDescrDate input,
 .placeDescrDate input {
     cursor: pointer !important;
-    color:black !important;
+    color: black !important;
     font-weight: 400 !important;
     font-size: 16px !important;
     max-height: 41px;
 }
 
+.routeDescrDate hr,
 .placeDescrDate hr {
     display: none;
 }
@@ -204,6 +231,7 @@
     width: 90% !important;
 } */
 
+.routeDescrDate:focus,
 .placeDescrDate:focus {
     outline: none;
 }
@@ -238,7 +266,8 @@
 }
 
 .placeDescription_fragmentName_mapBlock {
-    width: /*870px;*/100%;
+    width: /*870px;*/
+    100%;
     height: 400px;
     /*background-color: red;*/
 }
@@ -272,43 +301,43 @@
     padding: 14px 20px;
 }
 
-.placePhotos_elementBlock{
+.placePhotos_elementBlock {
     margin-bottom: 10px;
     position: relative;
 }
 
-.placePhotos_imageStyle{
+.placePhotos_imageStyle {
     border-radius: 10px;
 }
 
-.placePhotos_maskBlock{
+.placePhotos_maskBlock {
     top: 0;
-    left:0;
+    left: 0;
     position: absolute;
     width: 100%;
     height: 100%;
 }
 
-.placePhotos_maskBlock_inner{
+.placePhotos_maskBlock_inner {
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.33);
     width: 100%;
     height: 100%;
 }
 
-.placePhoto_imageContainer{
-    margin-bottom: '10px'; 
+.placePhoto_imageContainer {
+    margin-bottom: '10px';
 }
 
-.placePhoto_imageContainer:hover{
+.placePhoto_imageContainer:hover {
     cursor: pointer
 }
 
-.placePhotos_maskBlock_inner:hover{
+.placePhotos_maskBlock_inner:hover {
     cursor: pointer
 }
 
-.placePhotos_maskBlock_innerText{
+.placePhotos_maskBlock_innerText {
     margin: auto;
     color: #ffffff;
     font-weight: 600;
