--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -6,14 +6,15 @@
     padding: 0 10px;
 }
 
-.driverProfileComments_panel_element {
+
+/* .driverProfileComments_panel_element {
     height: 100%;
     background: transparent;
     border: none;
     line-height: 35px;
     padding: 0;
     margin-right: 30px;
-}
+} */
 
 .driverProfileComments_panel_selectedElement {
     color: #ff6600;
@@ -192,7 +193,7 @@
 }
 
 .news {
-    height: 100px;
+    height: 40px;
     line-height: 20px;
     overflow: hidden;
     /* Обрезаем все, что не помещается в область */
@@ -201,9 +202,6 @@
     position: relative;
     text-overflow: ellipsis;
     width: 100%;
-    font-weight: 400;
-    font-size: 14px;
-    color: #304269;
 }
 
 .news::after {
@@ -216,16 +214,18 @@
     text-overflow: ellipsis;
     display: block;
     width: 45px;
-    padding-left: 5px;
+    padding-left: 2px;
     overflow: hidden;
     pointer-events: none;
     background: #fff;
-    /* Цвет фона */
-    /*background: #fc0;*/
+    color: #304269;
 }
 
 label {
     cursor: pointer;
+    font-weight: 400;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .put {
