--- a/src/components/driverProfileRegistration/DriverProfileFeedback.css
+++ b/src/components/driverProfileRegistration/DriverProfileFeedback.css
@@ -11,7 +11,10 @@
     border: none;
     line-height: 35px;
     padding: 0;
-    margin-right: 30px;
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 16px;
+    font-weight: 400;
+    cursor: pointer;
 }
 
 .driverProfileComments_panel_selectedElement {
