--- a/src/components/manipulator/Manipulator.css
+++ b/src/components/manipulator/Manipulator.css
@@ -76,7 +76,7 @@
     width: 100px;
     text-align: center;
     line-height: 20px;
-    font-size: 12pt;
+    font-size: 14px;
     font-weight: 400;
     color: #686868;
     border: none;
