--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -3,7 +3,12 @@
     border-bottom: 1px solid #cccccc;
     font-size: 16px;
     font-weight: 600;
-    padding: 0 10px;
+    margin: 10px 0;
+    padding: 5px;
+    position: sticky;
+    top: 0px;
+    background: #fff;
+    z-index: 10;
 }
 
 
@@ -239,5 +244,13 @@ label {
     }
     input:checked+.news::after {
         content: none;
+    }
+    .driverProfileComments_panel {
+        margin: 10px 0;
+        padding: 5px 0;
+        position: sticky;
+        top: 0px;
+        background: #fff;
+        z-index: 10;
     }
 }
