--- a/src/components/PlaceDescription/PlacePhotoShow.css
+++ b/src/components/PlaceDescription/PlacePhotoShow.css
@@ -5,3 +5,9 @@
 .react-images__positioner{
     z-index: 100!important;
 }
+
+.react-images__header{
+    opacity: 1!important;
+    transform: translateY(0px)!important;
+    -webkit-transform: translateY(0px)!important;
+}
