--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -263,6 +263,7 @@
     font-size: 24px;
     text-align: center;
     color: #fff;
+    min-height: 61px;
 }
 
 .placeDescription_fragmentName_mapBlock {
@@ -326,7 +327,7 @@
 }
 
 .placePhoto_imageContainer {
-    margin-bottom: '10px';
+    margin-bottom: 10px;
 }
 
 .placePhoto_imageContainer:hover {
