--- a/src/components/manipulator/Manipulator.css
+++ b/src/components/manipulator/Manipulator.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 190px;
+    /*height: 190px;*/
+    padding: 0 0 20px 0;
 }
 
 .driversBlockManipulator_button {
@@ -45,7 +46,8 @@
 .driversBlockManipulator_pageNumbers {
     display: flex;
     flex-direction: row;
-    height: 20px;
+    /*height: 20px;*/
+    padding-bottom: 10px;
     margin: 0 auto;
 }
 
