--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -157,6 +157,20 @@
     color: black;
 }
 
+.placesDescription_travelBlock_element ::-webkit-input-placeholder{
+    color: black;
+}
+
+.placesDescription_travelBlock_highlighted
+{
+    background: rgba(34, 157, 78, 0.49);
+    
+}
+
+.placesDescription_travelBlock_highlighted input{
+    background: transparent;
+}
+
 .placesDescription_travelBlock_element :nth-child(2) {
     width: 100%;
 }
@@ -180,7 +194,7 @@
 .routeDescrDate {
     cursor: pointer;
     width: 100%;
-    background: rgba(255, 255, 255, 0.3);
+    /*background: rgba(255, 255, 255, 0.3);*/
     border-radius: 5px;
     /*margin: 2px;*/
     max-height: 41px;
@@ -192,7 +206,7 @@
     width: 100% !important;
     color: #000 !important;
     font-weight: 400 !important;
-    font-size: 14px !important;
+    font-size: 16px !important;
     max-height: 41px;
     line-height: 41px;
     bottom: 0 !important;
@@ -303,7 +317,7 @@
 }
 
 .placePhotos_elementBlock {
-    margin-bottom: 10px;
+    margin: 10px 0;
     position: relative;
 }
 
