--- a/src/components/Places/PopularPlaces.css
+++ b/src/components/Places/PopularPlaces.css
@@ -58,10 +58,12 @@
     z-index: 8;
     cursor: pointer;
     top: 35%;
-    left: 28%;
+    left: 0;
+    right: 0;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
+    text-align: center;
 }
 
 .popularPlacesEl img {
