--- a/src/components/home/HomeBody/HomeBody.css
+++ b/src/components/home/HomeBody/HomeBody.css
@@ -93,7 +93,7 @@
     background: rgba(255, 255, 255, 0.3);
 }
 
-.routContent {
+.routeContent {
     margin-bottom: 100px;
     background: rgba(48, 66, 105, 0.9);
     border-radius: 0 0 5px 5px;
