--- a/src/components/RouteDescription/RouteDescription.css
+++ b/src/components/RouteDescription/RouteDescription.css
@@ -31,6 +31,7 @@
 .routeTravelBlock_height{
     min-height: 41px;
     max-height: 41px;
+    overflow: hidden;
 }
 .routeDescription_topImageMask{
     top: 0;
