--- a/src/components/driverProfile/DriverProfile.css
+++ b/src/components/driverProfile/DriverProfile.css
@@ -34,7 +34,20 @@
 .drivers_route .classDiv input {
     cursor: default !important;
 }
-
+.driverProfile_searchContainer{
+    width: 100%;
+    margin: auto 0;
+    
+}
+.driverProfile_searchContainer div{
+    width: 100%;
+}
+.driverProfile_searchContainer input{
+    color: black/*!important*/;
+    text-transform: capitalize;
+    font-size: 16px;
+    font-family: Roboto;
+}
 
 /* .drivers_route_form {
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.3);
@@ -250,6 +263,7 @@ span.drivers_route_Link {
     color: #304269;
     font-size: 14px;
     font-weight: 400;
+    width: 120px;
 }
 
 .drivers_routePromo input::placeholder {
