--- a/src/components/driverProfileRegistration/DriverProfileFeedback.css
+++ b/src/components/driverProfileRegistration/DriverProfileFeedback.css
@@ -8,7 +8,7 @@
     font-size: 16px;
     font-weight: 400;
     cursor: pointer;
-    margin: 0 15px;
+    /* margin: 0 15px; */
 }
 
 .descriptionPanel_element {
@@ -19,7 +19,6 @@
     padding-right: 30px;
     cursor: pointer;
 }
-
 
 .profileFeedbackBlock_comments {
     position: relative;
@@ -38,7 +37,6 @@
     padding-bottom: 10px;
     border-bottom: 1px solid #cccccc;
 }
-
 
 .commentBlock_picture img {
     border-radius: 50%;
