--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -187,6 +187,8 @@
         height: 90px;
     }
     .bodyTopDriverInfoName p {
+        overflow: scroll;
+        max-width: 60vw;
         font-weight: 400;
         font-size: 18px;
     }
