fix css and delete redusers

--- a/src/components/driverProfileRegistration/DriverProfileCalendar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCalendar.css
@@ -104,7 +104,10 @@
 /* myPhoneInput Begin */
 
 .myPhoneInput {
+    position: relative;
     width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .myPhoneInput input:focus {
