--- a/src/components/driverProfileRegistration/DriverProfileCalendar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCalendar.css
@@ -105,7 +105,7 @@
 
 .myPhoneInput {
     position: relative;
-    width: 100%;
+    width: 100% !important;
     display: flex;
     align-items: center;
 }
