--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -156,6 +156,25 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
+    overflow-y: hidden;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.driversBlock_carName::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.0);
+    background-color: #F5F5F5;
+}
+
+.driversBlock_carName::-webkit-scrollbar {
+    width: 1px;
+    height: 0px;
+    background-color: #F5F5F5;
+}
+
+.driversBlock_carName::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border: 0px solid #555555;
 }
 
 .driversBlock_carName:hover {
