--- a/src/components/Places/PopularPlaces.css
+++ b/src/components/Places/PopularPlaces.css
@@ -134,4 +134,7 @@
         overflow-y: hidden;
         scroll-behavior: smooth;
     }
+    .popularPlacesEl span {
+        text-align: center;
+    }
 }
