--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -21,14 +21,16 @@
     position: relative;
     align-items: center;
     /*width: 100%;*/
-    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     padding: 30px 20px;
     margin-bottom: 10px;
     border-radius: 5px;
+    transition: all 0.3s;
 }
 
 .drivers_block_element:hover {
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.25);
+    transform: scale(1.04);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .block_element_right {
@@ -76,6 +78,7 @@
 }
 
 .driversBlock_driverCard:hover {
+    transform: scale(1.04);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
