--- a/src/components/home/HomeBody/HomeBody.css
+++ b/src/components/home/HomeBody/HomeBody.css
@@ -21,7 +21,7 @@
 .mobailRoutMenuTitle {
     color: #fff;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 25px;
     margin-top: 20px;
 }
 
@@ -29,6 +29,8 @@
     color: #fff;
     font-weight: 400;
     font-size: 14px;
+	margin-top: -20px;
+    padding-bottom: 25px;
 }
 
 .mobailRoutMenuBtList {
@@ -113,3 +115,4 @@
         text-align: center;
     }
 }
+
