--- a/src/components/driverProfile/DriverInfo.css
+++ b/src/components/driverProfile/DriverInfo.css
@@ -15,7 +15,7 @@
 .driverInfo_photo img {
     width: 156px;
     height: 156px;
-    border-radius: 50%;
+    border-radius: 10%;
     object-fit: cover;
 }
 
@@ -101,7 +101,7 @@
     top: 0px;
     width: 20px;
     height: 20px;
-    padding: 15px;
+    padding: 10px;
     cursor: pointer;
     background-position: top center !important;
     background-repeat: no-repeat !important;
@@ -151,6 +151,8 @@
     color: #686868;
     font-size: 14px;
     font-weight: 400;
+	    padding-left: 3px;
+    padding-bottom: 10px;
 }
 
 @media (max-width: 990px) {
@@ -162,14 +164,15 @@
         padding-bottom: 0px;
     }
     .driverInfo_photo {
-        width: 90px;
-        height: 90px;
-        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        
+		padding:5px;
     }
     .driverInfo_photo img {
-        width: 90px;
-        height: 90px;
-        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+      
     }
     .driverInfo_left_line {
         margin-bottom: 30px;
