--- a/src/components/driverProfileRegistration/DriverProfileFeedback.css
+++ b/src/components/driverProfileRegistration/DriverProfileFeedback.css
@@ -4,11 +4,12 @@
     border: none;
     line-height: 35px;
     padding: 0;
-    color: rgba(0, 0, 0, 0.6);
-    font-size: 16px;
-    font-weight: 400;
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 14px;
+    font-weight: 500;
+	text-transform: uppercase;
     cursor: pointer;
-    /* margin: 0 15px; */
+    margin: 0 15px;
 }
 
 .descriptionPanel_element {
