--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -13,7 +13,7 @@
 
 .infoString {
     font-size: 10.5pt;
-    font-weight: 500;
+    font-weight: 400;
     margin-right: 1%;
 }
 
@@ -145,21 +145,43 @@
 }
 
 .driversBlock_driverInfoBlock_element {
-    padding-top: 15px;
+    
     width: 100%;
     font-size: 12px;
     color: #304269;
     transition: all 0.3s;
+	padding-top:15px;
+}
+.starsd
+{
+	margin-top:-18px;
+	margin-left:50px;
 }
 
 .driversBlock_carName {
     font-size: 16px;
+	padding-top: 15px;
     font-weight: 500;
     line-height: 16px;
     overflow-y: hidden;
     overflow-x: auto;
     white-space: nowrap;
 }
+
+.driversBlock_driver {
+
+	padding-top: 15px;
+
+}
+
+.langd
+
+{
+	padding-left:5px;
+	margin-top:-2px;
+	
+}
+
 
 .driversBlock_carName::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.0);
@@ -182,8 +204,8 @@
 }
 
 .driverBlock_carInfoLine {
-    padding-top: 10px;
-    padding-bottom: 15px;
+    padding-top: 6px;
+    padding-bottom: 7px;
     border-bottom: 1px solid #686868;
 }
 
@@ -193,7 +215,7 @@
 
 .driversBlock_buttonStyle {
     padding: 0;
-    height: 50px;
+    height: 60px!important;
     background: #304269;
     color: #fff;
     border: none;
@@ -211,6 +233,7 @@
     width: 33px;
     height: 28px;
     margin-right: 5px;
+	margin-top:-1px;
 }
 
 .driversBlock_carInfoLine_value {
@@ -218,7 +241,7 @@
     line-height: 22px;
     font-weight: 400;
     padding-top: 4px;
-    color: #304269;
+    color: #686868;
 }
 
 .driversBlock_driverCard_photo {
@@ -230,11 +253,14 @@
     background-size: cover !important;
     background-position: center center !important;
     transition: all 0.3s;
+		display:inline-block; 
 }
 
 .driversBlock_driverCard_driverInfo {
     padding-left: 8px;
-    padding-top: 8px;
+    padding-top: 4px;
+	display:inline-block; 
+	
 }
 
 .driversBlock_driverCard_photo:hover {
@@ -265,6 +291,12 @@
     border-radius: 7px;
     background-repeat: no-repeat !important;
     background-position: center center !important;
+	    margin-top: 8px;
+		display:inline-block;
+}
+.langi
+{
+padding-left:7px;	
 }
 
 .driversBlock_bookmark {
@@ -310,16 +342,18 @@
 @media (max-width: 742px) {
     .driversBlock_driverInfoBlock_element {
         font-size: 14px;
-        padding-top: 10px;
+
     }
     .driversBlock_carInfoLine_value {
-        font-size: 16px;
+        font-size: 14px;
     }
     .driversBlock_carName {
-        font-size: 18px;
+        font-size: 20px;
+		padding-bottom: 10px;
     }
     .driversBlock_commentary {
         font-size: 12px;
+		padding-top:10px;
     }
     .driversBlock_buttonStyle {
         font-size: 18px;
@@ -329,12 +363,14 @@
         width: 35px;
         height: 30px;
         margin-right: 5px;
+		color:#686868;
     }
     .driversBlock_languages_flag {
         margin-right: 5px;
         width: 18px;
         height: 18px;
         border-radius: 7px;
+		margin-top:2px;
     }
     .driverBlock_carInfoLine {
         padding: 0px;
