--- a/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
@@ -14,6 +14,8 @@
     font-weight: 500;
     text-align: left;
     color: #304269;
+	padding-left:0px;
+	padding-top:3px;
 }
 
 .block_element_infoBlock_element {
@@ -34,7 +36,7 @@
     .block_element_infoBlock {
         justify-content: space-between;
         height: 100%;
-        padding: 0 5px;
+        padding-left:20px;
         color: #304269;
     }
 }
