--- a/src/components/drivers/DriversBody/DriversProperties/components/AutoMenu/AutoMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/AutoMenu/AutoMenu.css
@@ -47,6 +47,7 @@
     padding-bottom: 0px !important;
     padding-top: 0px !important;
     min-height: 30px !important;
+	line-height: 2.4!important;
 }
 
 .MuiCheckbox-root {
