--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -23,7 +23,7 @@
     /*width: 100%;*/
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     padding: 30px 20px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     border-radius: 5px;
     transition: all 0.3s;
 }
