--- a/src/components/driverProfile/DriverInfo.css
+++ b/src/components/driverProfile/DriverInfo.css
@@ -1,8 +1,10 @@
 .driverInfo_background {
     background-color: #ffffff;
     padding: 30px 10px 35px 20px;
-    border-radius: 5px 5px 0 0;
+    border-radius: 5px;
     margin-top: 35px;
+    margin-bottom: 30px;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
 }
 
 .driverInfo_left_line {
@@ -151,7 +153,7 @@
     color: #686868;
     font-size: 14px;
     font-weight: 400;
-	    padding-left: 3px;
+    padding-left: 3px;
     padding-bottom: 10px;
 }
 
@@ -166,13 +168,11 @@
     .driverInfo_photo {
         width: 120px;
         height: 120px;
-        
-		padding:5px;
+        padding: 5px;
     }
     .driverInfo_photo img {
         width: 120px;
         height: 120px;
-      
     }
     .driverInfo_left_line {
         margin-bottom: 30px;
