--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
@@ -10,7 +10,7 @@
 /* Content Begin */
 
 .tripSettingsContent {
-    padding: 30px 20px 20px 20px;
+    padding: 0px 20px 20px 20px;
     transition: all 0.3s;
 }
 
@@ -21,12 +21,6 @@
     margin-bottom: 0px;
 }
 
-.tripSettingsContent p {
-    font-weight: 400;
-    font-size: 13px;
-    color: #304269;
-    margin-bottom: 0px;
-}
 
 .tripSettingsContent select {
     font-weight: 400;
@@ -35,14 +29,18 @@
 }
 
 div.tripSettingsContentTitle {
-    margin: 30px 0;
+   
+    padding-top:10px;
 }
 
-.tripSettingsContentTitle p {
+.tripSettingsContentTitle  {
     font-weight: 500;
     font-size: 16px;
     color: #304269;
     margin-bottom: 0px;
+    text-transform:uppercase;
+    padding-bottom:20px!important;
+    padding-top:25px!important;
 }
 
 .tripSettingsContentP p {
@@ -154,7 +152,14 @@ div.tripSettingsContentAddCity p:hover {
 .tripSettingsContent button:focus {
     outline: none;
 }
+.closetext
+{
 
+    font-weight: 400!important;
+    font-size: 14px!important;
+    color: #686868!important;
+    margin-bottom: 0px!important;
+}
 
 /* .tripSettingsContentDate {} */
 
@@ -193,4 +198,40 @@ div.tripSettingsContentAddCity p:hover {
     }
 }
 
-@media (max-width: 576px) {}
+@media (max-width: 768px) {
+
+    .tripSettingsContent {
+        padding: 5px 0px 0px 0px;
+        transition: all 0.3s;
+    }
+
+
+    .tripSettingsContent input {
+        min-height:0;
+
+    }
+
+    .triplabel
+    {
+    padding-top:20px!important;
+    }
+
+    .tripSettingsContentTitle
+    {
+        text-align: center;
+    }
+
+    .dailymile {
+        display:none;
+    }
+    .tripname
+    {
+        padding-bottom:0px!important;
+    }
+.tripSettingsContentP
+{
+    padding-bottom:20px;
+}
+    
+    }
+
