--- a/src/components/driverProfileRegistration/DriverProfileFeedback.css
+++ b/src/components/driverProfileRegistration/DriverProfileFeedback.css
@@ -7,7 +7,7 @@
     color: rgba(0, 0, 0, 0.7);
     font-size: 14px;
     font-weight: 500;
-	text-transform: uppercase;
+    text-transform: uppercase;
     cursor: pointer;
     margin: 0 15px;
 }
@@ -45,3 +45,13 @@
     height: 60px;
     width: 60px;
 }
+
+@media (max-width: 900) {}
+
+@media (max-width: 560px) {
+    .driverProfileComments_panel_element {
+        margin: 0px !important;
+    }
+}
+
+@media (max-width: 430px) {}
