--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -115,7 +115,7 @@
 }
 
 .driversBlock_carBlackout_detailed {
-    width: 50%;
+    width: 60%;
     height: 100px;
     overflow: auto;
     margin: auto;
@@ -148,22 +148,21 @@
 }
 
 .driversBlock_driverInfoBlock_element {
-    
     width: 100%;
     font-size: 12px;
     color: #304269;
     transition: all 0.3s;
-	padding-top:15px;
+    padding-top: 15px;
 }
-.starsd
-{
-	margin-top:-18px;
-	margin-left:50px;
+
+.starsd {
+    margin-top: -18px;
+    margin-left: 50px;
 }
 
 .driversBlock_carName {
     font-size: 16px;
-	padding-top: 15px;
+    padding-top: 15px;
     font-weight: 500;
     line-height: 16px;
     overflow-y: hidden;
@@ -172,19 +171,13 @@
 }
 
 .driversBlock_driver {
-
-	padding-top: 15px;
-
+    padding-top: 15px;
 }
 
-.langd
-
-{
-	padding-left:5px;
-	margin-top:-2px;
-	
+.langd {
+    padding-left: 5px;
+    margin-top: -2px;
 }
-
 
 .driversBlock_carName::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.0);
@@ -236,7 +229,7 @@
     width: 33px;
     height: 28px;
     margin-right: 5px;
-	margin-top:-1px;
+    margin-top: -1px;
 }
 
 .driversBlock_carInfoLine_value {
@@ -256,14 +249,13 @@
     background-size: cover !important;
     background-position: center center !important;
     transition: all 0.3s;
-		display:inline-block; 
+    display: inline-block;
 }
 
 .driversBlock_driverCard_driverInfo {
     padding-left: 8px;
     padding-top: 4px;
-	display:inline-block; 
-	
+    display: inline-block;
 }
 
 .driversBlock_driverCard_photo:hover {
@@ -294,12 +286,12 @@
     border-radius: 7px;
     background-repeat: no-repeat !important;
     background-position: center center !important;
-	    margin-top: 8px;
-		display:inline-block;
+    margin-top: 8px;
+    display: inline-block;
 }
-.langi
-{
-padding-left:7px;	
+
+.langi {
+    padding-left: 7px;
 }
 
 .driversBlock_bookmark {
@@ -345,18 +337,17 @@ padding-left:7px;
 @media (max-width: 742px) {
     .driversBlock_driverInfoBlock_element {
         font-size: 14px;
-
     }
     .driversBlock_carInfoLine_value {
         font-size: 14px;
     }
     .driversBlock_carName {
         font-size: 20px;
-		padding-bottom: 10px;
+        padding-bottom: 10px;
     }
     .driversBlock_commentary {
         font-size: 12px;
-		padding-top:10px;
+        padding-top: 10px;
     }
     .driversBlock_buttonStyle {
         font-size: 18px;
@@ -366,14 +357,14 @@ padding-left:7px;
         width: 35px;
         height: 30px;
         margin-right: 5px;
-		color:#686868;
+        color: #686868;
     }
     .driversBlock_languages_flag {
         margin-right: 5px;
         width: 18px;
         height: 18px;
         border-radius: 7px;
-		margin-top:2px;
+        margin-top: 2px;
     }
     .driverBlock_carInfoLine {
         padding: 0px;
@@ -383,7 +374,7 @@ padding-left:7px;
         border-radius: 5px;
         box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
         margin-bottom: 20px;
-        padding: 5px !important;
+        /* padding: 5px !important; */
     }
 }
 
