--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -116,7 +116,7 @@
     font-weight: 500;
     font-size: 21px;
     color: #333;
-	text-align:center;
+    text-align: center;
 }
 
 .modalCountryButtton {
@@ -364,11 +364,11 @@
 }
 
 .avatar {
-    width: 30px;
-    height: 30px;
-    background-size: 30px 30px !important;
+    width: 35px;
+    height: 35px;
+    background-size: cover !important;
+    background-position: center center;
     border-radius: 50%;
-    object-fit: cover;
 }
 
 .openMenu {
